src/stylus/header.styl
#header {
	z-index: 0;
	height: 500px;
	background: url(../images/bg-header.jpg) no-repeat center top #203041;
	background-size: cover;
	font-family: 'Proxima Nova Light';
	text-align: center;
	overflow: hidden;
	padding-top: 30px;
	box-sizing: border-box;
	transform: translateX(0);
	color: #fff;


	.text {
		padding: 0 0 40px;
	}

	h2 {
		margin-top: 30px;
		font-size: 36px;
		line-height: 48px;
	}

	p {
		margin-bottom: 0;
		color: #a1b4c6;
		font-size: 22px;
	}

	nav {
		position: relative;

		.facebook-widget {
			margin: 30px 0 0 10px;

			iframe {
				border: none;
				overflow: hidden;
				height: 21px;
			}
		}

		.align-left {
			position: absolute;
			top: 0;
			left: 0;
		}
		.align-right {
			position: absolute;
			top: 0;
			right: 0;
		}

		ul {
			list-style: none;
			margin: 5px 0;
			padding: 0;

			li {
				display: inline-block;
				margin: 0 10px;
			}

			li.text {
				font-size: 18px;
				padding: 0;

				a {
					color: #fff;
					text-decoration: none;
				}
			}

			&.social {
				li {
					list-style: none;
					vertical-align: middle;
					display: inline-block;
					margin: 0;
					margin-left: 10px;

					&:first-child {
						margin: 0;
					}

					a {
						width: 32px;
						height: 32px;
						display: block;
						transition: opacity 0.2s ease;
						overflow: hidden;
						text-indent: -9999px;

						&:hover {
							opacity: 0.7;
						}

						&.twitter {
							background: url(../images/icon-twitter.png) no-repeat center;
							background-size: contain;
						}
						&.google {
							background: url(../images/icon-google.png) no-repeat center;
							background-size: contain;
						}
						&.facebook {
							background: url(../images/icon-facebook.png) no-repeat center;
							background-size: contain;
						}
						&.blog {
							background: url(../images/icon-blog.png) no-repeat center;
							background-size: contain;
						}
						&.github {
							background: url(../images/icon-github.png) no-repeat center;
							background-size: contain;
						}
						&.stash {
							background: url(../images/icon-stash.png) no-repeat center;
							background-size: contain;
						}
						&.discourse {
							background: url(../images/icon-discourse.png) no-repeat center;
							background-size: contain;
						}
						&.popcorn {
							background: url(../images/icon-popcorn.png) no-repeat center;
							background-size: contain;
						}
					}
				}
			}
		}
	}
}

#logo {
	display: block;
	text-indent: -9999px;
	overflow: hidden;
	width: 211px;
	height: 71px;
	background: url(../images/header-logo.png) no-repeat;
	margin: 0 auto;
	text-align: left;
}

#links {
	font-size: 18px;
	font-weight: normal;
	padding: 0;
	margin: 0 0 30px;

	li {
		list-style: none;
		display: inline-block;
		text-align: center;
		vertical-align: top;

		&.download {
			line-height: 40px;
			margin-right: 0;

			a {
				line-height: 19px;
			}
		}
		&.github {
			position: relative;
			top: 16px;

			a:before {
				position: absolute;
				left: -30px;
			}
		}

		small {
			font-size: 12px;
			color: #d6d7d7;
			font-weight: normal;
			font-family: 'Proxima Nova Semibold Italic';

			.divider {
				padding: 0 3px;
			}

			a {
				color: #D6D7D7 !important;
			}
		}
	}

	a {
		color: #fff;
		text-decoration: none;
	}
}

@media screen and (max-width: 1024px){
	.align-left {
		left: 4%;
	}
	.align-right {
		right: 4%
	}
}

@media screen and (max-width: 510px){
	#header {
		height: 480px;
		position: static;
	}
	.container {
		position: static;
	}
	.text {
		h1 {
			font-size: 2em;
		}
		max-width: 90%;
		margin: 0 auto;
		font-size: 0.8em;
	}
	nav {
		.align-left, .align-right {
			display: none;
		}
	}
}

